--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<![endif]-->
 	</head>
 	<body id="why-bhi">
-		<div id="right-menu" class="hidden-sm hidden-xs">
+		<div id="left-menu" class="hidden-sm hidden-xs">
 				<ul>
 					<li>
 						<a href="#why-bhi">Why BHI?</a>
@@ -341,7 +341,7 @@
 							</tr>
 						</table>
 						<textarea maxlength="1000" name="email-body" rows=10 cols=30></textarea>
-						<a href="#top" class="button" id="submit">Submit</a>
+						<a href="#why-bhi" class="button" id="submit">Submit</a>
 					</form>
 				</div>
 			</div>
