Cleaned up Startup Package Section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					Entrepreneur Support
 				</div>
 				<div class="container">
-					<div class="col-sm-3 col-sm-10">
+					<div class="col-sm-3 col-xs-10">
 						<a data-toggle="modal" data-target="#todd-bio-modal" > <img class="people" src="images/todd-chappell.png"/></a>
 					</div>
 
@@ -108,14 +108,14 @@
 						</div>
 					</div>
 
-					<div class="col-sm-3 col-sm-10">
-						<a href="#"> <img class="people" src="images/192x192.gif"/></a>
+					<div class="col-sm-3 col-xs-10">
+						<a href="javascript:"> <img class="people" src="images/192x192.gif"/></a>
 					</div>
 					<div class="col-sm-3 col-xs-10">
-						<a href="#"> <img class="people" src="images/192x192.gif"/></a>
+						<a href="javascript:"> <img class="people" src="images/192x192.gif"/></a>
 					</div>
 					<div class="col-sm-3 col-xs-10">
-						<a href="#"> <img class="people" src="images/192x192.gif"/></a>
+						<a href="javascript:"> <img class="people" src="images/192x192.gif"/></a>
 					</div>
 				</div>
 			</div>
@@ -136,7 +136,7 @@
 					<p>
 						Incubation
 					</p>
-					<a href="#"> <img class="logo" src="images/logos/bhi-logo.png"/></a>
+					<a href="javascript:"> <img class="logo" src="images/logos/bhi-logo.png"/></a>
 				</div>
 
 				<div class="col-md-2 col-xs-10 int-property tile">
@@ -184,7 +184,7 @@
 								<h4 class="modal-title" id="ven-modal-label">Venable, LLP</h4>
 							</div>
 							<div class="modal-body">
-								With more than 600 attorneys in nine offices across the country, Venable is focused on all areas of corporate and business law, complex litigation, intellectual property, and regulatory and government affairs.
+								With more than 600 attorneys in nine offices across the country, Venable is focused on all areas of corporate and business law, complex litigation, intellectual property, and regulatory and government affairs. Proud Strategic Partner of BHI
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-default" data-dismiss="modal">
@@ -212,7 +212,7 @@
 								<h4 class="modal-title" id="aro-modal-label">Aronson, LLC</h4>
 							</div>
 							<div class="modal-body">
-								Aronson LLC is one of the largest and most respected independent Maryland accounting firms. For more than 50 years, our financial experts have provided the highest quality accounting services for businesses and individuals throughout the Washington Metro area and beyond. Dedicated to vision, integrity and excellent client service, Aronson’s CPAs, tax professionals and consultants can help you navigate complex financial matters.
+								Aronson LLC has been thinking ahead for its clients for more than 50 years. As business advisors to today's most active industry sectors, Aronson's experts provide innovative audit, tax, and consulting services that help clients rethink the way they do business. Dedicated to vision, integrity and excellent client service, Aronson's CPAs, tax professionals and consultants help BHI client companies navigate complex financial matters.
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-default" data-dismiss="modal">
@@ -227,98 +227,102 @@
 					<p>
 						Banking
 					</p>
-					<a href="#"> <img class="logo" src="images/logos/mtb-logo.png"/></a>
+					<a data-toggle="modal" data-target="#mtb-modal" > <img class="logo" src="images/logos/mtb-logo.png"/></a>
 				</div>
 
-				<!--</div>
-				<div class="row background">-->
-
-				<div class="col-md-2 col-xs-10 lab-space tile">
-					<p>
-						Laboratory Space
-					</p>
-					<a href="#"> <img class="logo" src="images/logos/bin-logo.png"/></a>
-					<a href="#"> <img class="logo" src="images/logos/biop-logo.png"/></a>
-					<a href="#"> <img class="logo" src="images/logos/bri-logo.png"/></a>
-				</div>
-
-				<div class="col-md-2 col-xs-10 grants tile">
-					<p>
-						Grant Consulting
-					</p>
-					<a data-toggle="modal" data-target="#bbc-modal" > <img class="logo" src="images/logos/bbc-logo.png"/></a>
-					<a data-toggle="modal" data-target="#ss-modal" > <img class="logo" src="images/logos/ss-logo.png"/></a>
-				</div>
-
-				<div class="modal fade" id="bbc-modal" tabindex="-1" role="dialog" aria-labelledby="bbc-modal-label" aria-hidden="true">
+				<div class="modal fade" id="mtb-modal" tabindex="-1" role="dialog" aria-labelledby="mtb-modal-label" aria-hidden="true">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 									&times;
 								</button>
-								<h4 class="modal-title" id="bbc-modal-label">Biotechnology Business Consultants</h4>
+								<h4 class="modal-title" id="mtb-modal-label">M&amp;T Bank</h4>
 							</div>
 							<div class="modal-body">
-								BBC was formed as Biotechnology Business Consultants in 1990 to assist early-stage life science companies with technology commercialization strategy and implementation. Since then, the company has evolved and grown, now training and consulting with technology entrepreneurs and companies in a wide range of industries throughout the U.S.
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-default" data-dismiss="modal">
-									Close
-								</button>
+								M&T Bank has been committed to customers and community for more than 150 years. Founded on the principle of providing exceptional financial products and friendly, personalized service, M&T is more than just your neighborhood bank. Let us help you reach your financial goals with our full suite of bank accounts and lending solutions, including savings accounts, checking accounts, auto and home loans, and more. Bank of Choice for BHI Clients
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">
+										Close
+									</button>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="modal fade" id="ss-modal" tabindex="-1" role="dialog" aria-labelledby="ss-modal-label" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-									&times;
-								</button>
-								<h4 class="modal-title" id="ss-modal-label">Science Sherpa</h4>
+					<!--</div>
+					<div class="row background">-->
+
+					<div class="col-md-2 col-xs-10 lab-space tile">
+						<p>
+							Laboratory Space
+						</p>
+						<a href="javascript:"> <img class="logo" src="images/logos/bin-logo.png"/></a>
+						<a href="javascript:"> <img class="logo" src="images/logos/biop-logo.png"/></a>
+						<a href="javascript:"> <img class="logo" src="images/logos/bri-logo.png"/></a>
+					</div>
+
+					<div class="col-md-2 col-xs-10 grants tile">
+						<p>
+							Grant Consulting
+						</p>
+						<a data-toggle="modal" data-target="#bbc-modal" > <img class="logo" src="images/logos/bbc-logo.png"/></a>
+						<a data-toggle="modal" data-target="#ss-modal" > <img class="logo" src="images/logos/ss-logo.png"/></a>
+					</div>
+
+					<div class="modal fade" id="bbc-modal" tabindex="-1" role="dialog" aria-labelledby="bbc-modal-label" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+										&times;
+									</button>
+									<h4 class="modal-title" id="bbc-modal-label">Biotechnology Business Consultants</h4>
+								</div>
+								<div class="modal-body">
+									BBC Entrepreneurial Training &amp; Consulting, LLC (BBCetc)  works with technology-based entrepreneurs on strategies to advance R&D efforts to commercialization. In particular, the BBCetc team is nationally recognized for its success in helping clients secure federal funding through the Federal Small Business Innovation Research (SBIR) and Small Business Technology Transfer (STTR) programs.  BBCetc services include commercialization planning, research grant assistance, SBIR/STTR training and proposal development assistance, and grants and contract management.
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">
+										Close
+									</button>
+								</div>
 							</div>
-							<div class="modal-body">
-								The Science Sherpa offers a combination of services and programs to help researchers, technology companies, colleges, universities, medical schools, and hospitals win grants and contracts and reduce the stress and pressure of grant and proposal preparation.
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-default" data-dismiss="modal">
-									Close
-								</button>
+						</div>
+					</div>
+
+					<div class="modal fade" id="ss-modal" tabindex="-1" role="dialog" aria-labelledby="ss-modal-label" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+										&times;
+									</button>
+									<h4 class="modal-title" id="ss-modal-label">Science Sherpa</h4>
+								</div>
+								<div class="modal-body">
+									The Science Sherpa offers a combination of services and programs to help researchers, technology companies, colleges, universities, medical schools, and hospitals win grants and contracts and reduce the stress and pressure of grant and proposal preparation.
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">
+										Close
+									</button>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 
-			</div>
-			<!--
-			<div id="logo-slider" class="logo-slider-section">
-			<ul class="bjqs">
-			<li>
-			<img src="images/logos/bbc-logo.png">
-			</li>
-			<li>
-			<img src="images/logos/ms-logo.png">
-			</li>
-			<li>
-			<img src="images/logos/science-sherpa-logo.png">
-			</li>
-			</ul>
-			</div>
-			</div>
-			-->
+				<div class="row background" style="height: 70px" id="printer">
 
-			<div class="row background" style="height: 140px" id="printer">
-
-			</div>
-
-			<div class="row contact" id="apply">
-				<div class="title-main">
-					Apply Today
 				</div>
-				<div class="application-section">
+
+				<div class="row contact" id="apply">
+					<div class="title-main">
+						Apply Today
+					</div>
+					<div class="application-section">
 						<table>
 							<tr>
 								<td>First name</td>
@@ -341,10 +345,10 @@
 						</table>
 						<textarea maxlength="1000" name="message" rows=10 cols=30></textarea>
 						<a href="#why-bhi" class="button" id="submit" type="submit">Submit</a>
-					</form>
+						</form>
+					</div>
 				</div>
 			</div>
-		</div>
 	</body>
 
 	<footer id="footer">
