--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 			<div class="row shadow-top">
 				<div class="logo-container">
-					<a href="http://nbia.org/" target="_blank"><img src="images/logos/NBIA_member-logo.gif" /></a>
-					<a href="http://biohealthinnovation.org/" target="_blank"><img src="images/logos/BHI HQ Logo_800x179.png" /></a>
-					<a href="http://tedco.md/" target="_blank"><img src="images/logos/TEDCO_Logo.png" /></a>
+					<a href="http://nbia.org/" target="_blank"><img class="gray" src="images/logos/NBIA_member-logo.gif" /></a>
+					<a href="http://biohealthinnovation.org/" target="_blank"><img class="gray" src="images/logos/BHI HQ Logo_800x179.png" /></a>
+					<a href="http://tedco.md/" target="_blank"><img class="gray" src="images/logos/TEDCO_Logo.png" /></a>
 				</div>
 			</div>
 
@@ -104,7 +104,7 @@
 					Entrepreneur Support
 				</div>
 				<div class="col-sm-2 col-xs-10">
-					<a data-toggle="modal" data-target="#todd-bio-modal" > <img class="people" src="http://placehold.it/150&text=NIH"/></a>
+					<a data-toggle="modal" data-target="#todd-bio-modal" > <img class="people gray" src="/incubator/images/todd-chappell.png"/></a>
 				</div>
 
 				<div class="modal fade" id="todd-bio-modal" tabindex="-1" role="dialog" aria-labelledby="todd-bio-label" aria-hidden="true">
@@ -130,19 +130,19 @@
 				</div>
 
 				<div class="col-sm-2 col-xs-10">
-					<a href="javascript:"> <img class="people" src="http://placehold.it/150&text=NHLBI"/></a>
+					<a href="javascript:"> <img class="people gray" src="/incubator/images/ram-aiyar.png"/></a>
 				</div>
 				<div class="col-sm-2 col-xs-10">
-					<a href="javascript:"> <img class="people" src="http://placehold.it/150&text=UMV"/></a>
+					<a href="javascript:"> <img class="people gray" src="/incubator/images/ken-malone.png"/></a>
 				</div>
 				<div class="col-sm-2 col-xs-10">
-					<a href="javascript:"> <img class="people" src="http://placehold.it/150&text=BD"/></a>
+					<a href="javascript:"> <img class="people gray" src="http://placehold.it/150&text=BD"/></a>
 				</div>
 				<div class="col-sm-2 col-xs-10">
-					<a href="javascript:"> <img class="people" src="http://placehold.it/150&text=CFLD"/></a>
+					<a href="javascript:"> <img class="people gray" src="http://placehold.it/150&text=CFLD"/></a>
 				</div>
 				<div class="col-sm-2 col-xs-10">
-					<a href="javascript:"> <img class="people" src="http://placehold.it/150&text=..."/></a>
+					<a href="javascript:"> <img class="people gray" src="http://placehold.it/150&text=..."/></a>
 				</div>
 			</div>
 
